# core

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  README.md  SECURITY.md  VERSIONING.md  check_imports.py  debug_ner.py  docker-compose.yml  ingest_codebase.py  main.py  repro_hang.py  requirements.txt  run_tests.sh  start.sh  verify_imports.py
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
docs/: api.md  mcp.md  whitepaper_hitl.md
docs/architecture/: index.md  learning_system.md  schema.md
docs/usage/: best_practices.md  configuration.md  getting_started.md
frontend/: .dockerignore  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  Login.jsx  index.css
migrations/: hitl_review_001.py
project_website/: index.html
reference-architecture/: agent-operating-model.mermaid  cognitive-provenance-flow.mermaid  threat-model.md
rfcs/: 0001-memory-schema.md  0002-proof-envelope.md  0003-taint-model.md
sdks/go/: README.md  client.go  go.mod
sdks/mcp-bridge/: README.md  index.js  package-lock.json  package.json
sdks/python/: LICENSE  README.md  pyproject.toml
sdks/python/condensate/: __init__.py  cli.py  client.py  types.py
sdks/rust/: Cargo.toml  README.md
sdks/rust/src/: client.rs  lib.rs  main.rs  models.rs
sdks/ts/: README.md  package-lock.json  package.json
spec/: capability-contract.md  cognitive-provenance.md  learning-graph-model.md  memory-schema.md  replay-semantics.md
src/agents/: data_sources.py  ingress.py  langextract.py
src/db/: models.py  qdrant.py  (+2 more)
tests/: conftest.py  repro_json_error.py  repro_ner_gliner.py  test_admin_upload.py  test_cognitive.py  test_condenser.py  test_consolidate_hitl.py  test_data_sources.py  test_edge_synthesizer.py  test_guardrails.py  test_ingest.py  test_ingest_async.py  test_langextract.py  test_main.py  test_mcp.py  test_pipeline.py  test_provenance.py  test_router.py  test_scheduler.py  test_schema_integrity.py  test_thread_shard.py  test_threading_verification.py
(+29 files in other folders)
