[package]
name = "condensate"
version = "0.1.0"
edition = "2021"
description = "Official Rust Client for Condensate Memory System"
license = "Apache-2.0"
homepage = "https://condensate.io"
repository = "https://github.com/condensate-io/core"
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "README.md",
]

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["serde", "v4"] }
thiserror = "1.0"
